@@ -1,3 +1,8 @@
+2008-12-01  Tomas Mraz <t8m@centrum.cz>
+
+	* modules/pam_unix/support.h: Fix masks for cipher algorithm
+	flags.
+
 2008-12-01  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* modules/pam_unix/pam_unix.8.xml: Document blowfish option.
